--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "browser-image-compression": "^2.0.2",
     "google-libphonenumber": "^3.2.43",
     "lucide-react": "^0.546.0",
-    "next": "15.5.6",
+    "next": "^15.5.7",
     "radix-ui": "^1.4.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
